# physicsopedia

./: Procfile  README.md  pyproject.toml  requirements.txt
physicsopedia/: main.py
