[tool.poetry]
name = "physicsopedia"
version = "0.1.0"
description = ""
authors = ["bullbesh <babulehaha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.7b0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
